--- a/pegasystems.css
+++ b/pegasystems.css
@@ -27,10 +27,7 @@
 }
 
 .topBtnGrp {
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 20px;
-    padding-top: 20px;
+    padding: 20px 5px 20px 5px;
     border-bottom: #909090 solid 1px;
     background-color: #404040;
 }
@@ -74,11 +71,11 @@
     outline: none;
 }
 
-.searchContainer input::-webkit-input-placeholder {
+.searchContainer input::-webkit-input-placeholder, .searchContainer input::-moz-placeholder {
     font-style: italic;
 }
 
-.createBtn {
+.createBtn, .middleBtn, .bottomBtn {
     width: 100%;
     height: 40px;
     overflow: hidden;
@@ -89,17 +86,13 @@
     cursor: pointer;
 } 
 
-.createBtn i {
+.createBtn i, .middleBtn i, .bottomBtn i {
     float: left;
     min-width: 50px;
     color: white;
 }
 
-.createBtn a {
-    text-decoration: none;
-}
-
-.createBtn span {
+.createBtn span, .middleBtn span, .bottomBtn span {
     display: block;
     text-align: left;
     line-height: 1.8;
@@ -114,36 +107,8 @@
     background-color: #404040;
 }
 
-.middleBtnContainer {
+.middleBtnContainer, .bottomBtnContainer {
     height: 40px;
-}
-
-.middleBtn {
-    width: 100%;
-    height: 40px;
-    overflow: hidden;
-    white-space: nowrap;
-    padding: 0px;
-    border: 0px;
-    background-color: inherit;
-    cursor: pointer;
-}
-
-.middleBtn i {
-    float: left;
-    min-width: 50px;
-    color: white;
-}
-
-.middleBtn a {
-    text-decoration: none;
-}
-
-.middleBtn span {
-    display: block;
-    text-align: left;
-    line-height: 1.8;
-    color: white;
 }
 
 .bottomBtnGrp {
@@ -151,36 +116,4 @@
     position: absolute;
     top: calc(100% - 161px);
     width: 100%;
-}
-
-.bottomBtnContainer {
-    height: 40px;
-}
-
-.bottomBtn {
-    width: 100%;
-    height: 40px;
-    overflow: hidden;
-    white-space: nowrap;
-    padding: 0px;
-    border: 0px;
-    background-color: inherit;
-    cursor: pointer;
-}
-
-.bottomBtn i {
-    float: left;
-    min-width: 50px;
-    color: white;
-}
-
-.bottomBtn a {
-    text-decoration: none;
-}
-
-.bottomBtn span {
-    display: block;
-    text-align: left;
-    line-height: 1.8;
-    color: white;
 }
